V3923: Some Fix during simulation

--- a/Prevu.Synoptics.V3923_Evanses/OverallView.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/OverallView.xaml
@@ -547,24 +547,24 @@
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
-        <TextBlock Canvas.Top="5017" Text="{lex:Loc External Mixing Silos System}" TextWrapping="Wrap" TextAlignment="Center" Opacity="0.7" Canvas.Left="2373" FontSize="26" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center" Height="97" Width="238"/>
-        <local:P020 CacheMode="BitmapCache" Canvas.Left="88" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Top="269" d:IsLocked="True"/>
-        <local:P088 Canvas.Left="1096" Canvas.Top="2112" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P100 CacheMode="BitmapCache" Canvas.Left="1172" Canvas.Top="985" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P140 CacheMode="BitmapCache" Canvas.Left="2776" Canvas.Top="935" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P170 CacheMode="BitmapCache" Canvas.Left="4155" Canvas.Top="976" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P230 CacheMode="BitmapCache" Canvas.Left="6653" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P268 CacheMode="BitmapCache" Canvas.Left="49" Canvas.Top="3076" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P288 CacheMode="BitmapCache" Canvas.Left="8468" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P330 CacheMode="BitmapCache" Canvas.Left="1773" Canvas.Top="3066" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P350 CacheMode="BitmapCache" Canvas.Left="3483" Canvas.Top="3411" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P430 CacheMode="BitmapCache" Canvas.Left="5078" Canvas.Top="2813" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P443 CacheMode="BitmapCache" Canvas.Left="6565" Canvas.Top="3455" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P460 CacheMode="BitmapCache" Canvas.Left="6730" Canvas.Top="2474" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P530 Canvas.Left="8224" Canvas.Top="2816" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P608 CacheMode="BitmapCache" Canvas.Left="835" Canvas.Top="4627" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P849 CacheMode="BitmapCache" Canvas.Left="2410" Canvas.Top="4661" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P880 CacheMode="BitmapCache" Canvas.Left="3901" Canvas.Top="4502" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P940 CacheMode="BitmapCache" Canvas.Left="5490" Canvas.Top="4489" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <TextBlock Canvas.Top="5029" Text="{lex:Loc External Mixing Silos System}" TextWrapping="Wrap" TextAlignment="Center" Opacity="0.7" Canvas.Left="2373" FontSize="26" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" Height="77" Width="238"/>
+        <local:P020 d:CacheMode="BitmapCache" Canvas.Left="88" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Top="269" d:IsLocked="True"/>
+        <local:P088 d:CacheMode="BitmapCache" Canvas.Left="1096" Canvas.Top="2112" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P100 d:CacheMode="BitmapCache" Canvas.Left="1172" Canvas.Top="985" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P140 d:CacheMode="BitmapCache" Canvas.Left="2776" Canvas.Top="935" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P170 d:CacheMode="BitmapCache" Canvas.Left="4155" Canvas.Top="976" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P230 d:CacheMode="BitmapCache" Canvas.Left="6653" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P268 d:CacheMode="BitmapCache" Canvas.Left="49" Canvas.Top="3076" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P288 d:CacheMode="BitmapCache" Canvas.Left="8468" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P330 d:CacheMode="BitmapCache" Canvas.Left="1773" Canvas.Top="3066" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P350 d:CacheMode="BitmapCache" Canvas.Left="3483" Canvas.Top="3411" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P430 d:CacheMode="BitmapCache" Canvas.Left="5078" Canvas.Top="2813" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P443 d:CacheMode="BitmapCache" Canvas.Left="6565" Canvas.Top="3455" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P460 d:CacheMode="BitmapCache" Canvas.Left="6730" Canvas.Top="2474" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P530 d:CacheMode="BitmapCache" Canvas.Left="8224" Canvas.Top="2816" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P608 d:CacheMode="BitmapCache" Canvas.Left="835" Canvas.Top="4627" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P849 d:CacheMode="BitmapCache" Canvas.Left="2410" Canvas.Top="4661" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P880 d:CacheMode="BitmapCache" Canvas.Left="3901" Canvas.Top="4502" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P940 d:CacheMode="BitmapCache" Canvas.Left="5490" Canvas.Top="4489" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     </Canvas>
 </UserControl>
