--- a/Prevu.Synoptics.V3923_Evanses/Pages/P088.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P088.xaml
@@ -46,14 +46,14 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="182" Color="Water" StatusComponent="083-01-MA1" Canvas.Left="987" Canvas.Top="367" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="48" Color="Water" StatusComponent="091-23-CV1" Canvas.Left="1093" Canvas.Top="654" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="48" Color="Water" StatusComponent="091-23-CV1" Canvas.Left="1094" Canvas.Top="654" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="48" Color="Water" StatusComponent="091-23-CV1" Canvas.Left="1093" Canvas.Top="735" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="48" Color="Water" StatusComponent="091-23-CV1" Canvas.Left="1094" Canvas.Top="735" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -124,7 +124,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="71" Color="Water" StatusComponent="091-01-MA1" Canvas.Left="819" Canvas.Top="721" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="45" Color="Water" StatusComponent="092-22-CV1" Canvas.Left="1115" Canvas.Top="757" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="45" Color="Water" StatusComponent="091-21-CV1" Canvas.Left="1074" Canvas.Top="632" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="45" Color="Water" StatusComponent="091-21-CV1" Canvas.Left="1074" Canvas.Top="632" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:V01_PSP_Pit_wAgitator Width="209" Canvas.Top="249" Canvas.Left="39" Height="162" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="101-41-LT1" TrendName="LEVEL"/>
         <Machines:V01_PSP_Pit_wAgitator Width="210" Canvas.Top="324" Canvas.Left="462" Height="162" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="105-41-LT1" TrendName="LEVEL"/>
         <Machines:V01_PSP_Pit_wAgitator Width="208" VerticalAlignment="Center" Canvas.Top="616" Canvas.Left="248" Height="162" HorizontalAlignment="Left" ComponentName="103-41-LT1" TrendName="LEVEL"/>
@@ -156,7 +156,7 @@
         <Machines:V01_VRC_WaterTank Canvas.Left="623" Canvas.Top="633" Width="214" Height="122" ComponentName="088-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="908" Canvas.Top="737" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="908" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="38" Width="48" Canvas.Left="1093" Canvas.Top="679" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="38" Width="48" Canvas.Left="1094" Canvas.Top="679" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -218,7 +218,7 @@
         <Labels:DeviceLabel ComponentName="092-01-MA1" Canvas.Left="885" Canvas.Top="783" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="091-01-MA1" Canvas.Left="885" Canvas.Top="561" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="091-21-CV1" Canvas.Left="1010" Canvas.Top="561" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="091-23-CV1" Canvas.Left="1136" Canvas.Top="672" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="091-23-CV1" Canvas.Left="1137" Canvas.Top="672" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="091-22-CV1" Canvas.Left="1134" Canvas.Top="561" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="092-21-CV1" Canvas.Left="1010" Canvas.Top="783" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="092-22-CV1" Canvas.Left="1134" Canvas.Top="783" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -237,5 +237,7 @@
         <Labels:DeviceLabel ComponentName="101-41-LT1" Canvas.Left="149" Canvas.Top="179" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="091-44-FT1" Canvas.Left="1251" Canvas.Top="561" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="092-44-FT1" Canvas.Left="1251" Canvas.Top="783" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Ellipse Height="10" Stroke="#FFBDBDBD" Width="10" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1113" Canvas.Top="755" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Ellipse Height="10" Stroke="#FFBDBDBD" Width="10" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1113" Canvas.Top="630" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
