--- a/Prevu.Synoptics.V3923_Evanses/Pages/P230.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P230.xaml
@@ -46,10 +46,10 @@
         <Labels:Pipe Color="Water" Width="74" StatusComponent="292-01-MA1" Canvas.Left="995" Canvas.Top="704" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="76" StatusComponent="292-01-MA1" Canvas.Left="1087" Canvas.Top="695" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
         <Labels:Pipe Color="Water" Width="158" StatusComponent="292-01-MA1" Canvas.Left="1186" Canvas.Top="704" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="94" StatusComponent="229-22-CV1" Canvas.Left="770" Canvas.Top="191" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="94" StatusComponent="291-01-MA1" Canvas.Left="770" Canvas.Top="191" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-22-CV1"/>
         <Labels:Pipe Width="59" StatusComponent="291-01-MA1" Canvas.Left="900" Canvas.Top="191" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="62" StatusComponent="291-01-MA1" Canvas.Left="529" Canvas.Top="191" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="95" StatusComponent="229-21-CV1" Canvas.Left="632" Canvas.Top="191" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water"/>
+        <Labels:Pipe Width="95" StatusComponent="291-01-MA1" Canvas.Left="632" Canvas.Top="191" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" VisibilityComponent="229-21-CV1"/>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="270" StatusComponent="208-01-MA1" PipeHeight="Medium" Canvas.Left="786" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS2"/>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="423" StatusComponent="208-01-MA1" PipeHeight="Medium" Canvas.Left="280" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS3"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="241" Canvas.Top="540">
@@ -205,8 +205,8 @@
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="454" Canvas.Left="184" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_GrinderDiverter Canvas.Left="683" Canvas.Top="171" Height="103" Width="128" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_MU_Grinder Canvas.Left="179" Canvas.Top="359" Height="161" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_MU_Grinder Canvas.Left="948" Canvas.Top="360" Height="160" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_MU_Grinder Canvas.Left="179" Canvas.Top="359" Height="161" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-01-MA1" TrendName="CURRENT.AMP_INTEGRATION" Color="WetMaterial"/>
+        <Machines:V01_MU_Grinder Canvas.Left="948" Canvas.Top="360" Height="160" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center" Color="WetMaterial" ComponentName="240-01-MA1" TrendName="CURRENT.AMP_INTEGRATION"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="265" Canvas.Top="549" Height="152" Width="156" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="1034" Canvas.Top="549" Height="152" Width="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:VRC_WaterCollectingTank Height="66" Width="93" Canvas.Left="262" Canvas.Top="756" HorizontalAlignment="Center" VerticalAlignment="Top"/>
