--- a/Prevu.Synoptics.V6120_Novatex/Pages/P010.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P010.xaml
@@ -145,14 +145,14 @@
     <Labels:DetailsLabel ComponentName="008-LUB" DetailsPageName="D008" Canvas.Left="138" Canvas.Top="30" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="010-HYD" DetailsPageName="D010" Canvas.Left="44" Canvas.Top="405"/>
     <Labels:DetailsLabel ComponentName="024-LUB" DetailsPageName="D024" Canvas.Left="326" Canvas.Top="625" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="1182" Canvas.Top="407" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="1236" Canvas.Top="409" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="024-41-LT1" Canvas.Left="148" Canvas.Top="697" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="008-01-MA1" Canvas.Left="245" Canvas.Top="85"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="015-01-MA1" Canvas.Left="544" Canvas.Top="163"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="010-41-LT1" Canvas.Left="131" Canvas.Top="257"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="012-01-MA1" Canvas.Left="466" Canvas.Top="356"/>
     <Labels:DeviceLabel ComponentName="010-DEBALER" Canvas.Left="106" Canvas.Top="405" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:DeviceLabel ComponentName="030-01-YA1" Canvas.Left="1288" Canvas.Top="407" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="030-01-YA1" Canvas.Left="1081" Canvas.Top="524" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="010-01-YA1" Canvas.Left="74" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="008-01-YA1" Canvas.Left="349" Canvas.Top="86" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="024-01-MA1" Canvas.Left="434" Canvas.Top="680" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -161,5 +161,6 @@
     <Labels:DeviceLabel ComponentName="026-01-MA1" Canvas.Left="819" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel Canvas.Top="396" Canvas.Left="804" ComponentName="027-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="028-01-MA1" Canvas.Left="1036" Canvas.Top="408" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="030.1-01-YA1" Canvas.Left="1081" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
